# drift

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docs/: Project-Specification.md  Technical-Design-Document.md
src/drift/: __main__.py  app.py  client.py  config.py  exceptions.py  logger.py  models.py  security.py
src/drift/adapters/: github_mapper.py  gitlab_mapper.py
src/drift/clients/: base.py  factory.py  github_client.py  gitlab_client.py
src/drift/clients/mixins/: __init__.py  caching.py  pagination.py  retry.py
tests/: conftest.py  test_main.py
tests/unit/: test_app.py  test_config.py  test_config_edge_cases.py  test_exceptions.py  test_main.py  test_security.py
tests/unit/adapters/: test_github_mapper.py  test_gitlab_mapper.py
tests/unit/clients/: test_base.py  test_factory.py  test_github_client.py  test_gitlab_client.py
tests/unit/clients/mixins/: test_caching.py  test_pagination.py  test_retry.py
